[2022-43][WIP] Added conditions to CHOP Codes to include sideness and date from revised data. TODO: Retrieve sideness and date from BFS Data

--- a/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization_OK.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization_OK.ipynb
@@ -87,8 +87,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-28 12:15:56.029 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 17 cases for Hirslanden Aarau 2018\n",
-      "2022-10-28 12:15:56.033 | INFO     | src.revised_case_normalization.py.normalize:normalize:57 - TYPES:\n",
+      "2022-10-31 09:04:05.486 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 17 cases for Hirslanden Aarau 2018\n",
+      "2022-10-31 09:04:05.490 | INFO     | src.revised_case_normalization.py.normalize:normalize:57 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "case_id                   object\n",
@@ -119,18 +119,18 @@
       "kassenbeanstandung        string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-10-28 12:15:56.038 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-10-28 12:15:56.041 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-10-28 12:15:56.044 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-10-28 12:15:56.046 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-10-28 12:15:56.046 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-10-28 12:15:56.050 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
-      "2022-10-28 12:15:56.052 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:100 - Completed validation\n"
+      "2022-10-31 09:04:05.496 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-10-31 09:04:05.498 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-10-31 09:04:05.501 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-10-31 09:04:05.504 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-10-31 09:04:05.504 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-10-31 09:04:05.509 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
+      "2022-10-31 09:04:05.513 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:100 - Completed validation\n"
      ]
     }
    ],
    "source": [
-    "df_revised_case_d2d = normalize(file_info, 0)"
+    "df_revised_case_d2d = normalize(file_info, 0)\n"
    ]
   },
   {
@@ -315,7 +315,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-28 12:15:56.927 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:124 - Read 10112 rows from the DB, for the hospital 'Hirslanden Aarau' in 2018\n"
+      "2022-10-31 09:04:06.853 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:124 - Read 10112 rows from the DB, for the hospital 'Hirslanden Aarau' in 2018\n"
      ]
     },
     {
@@ -948,7 +948,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-28 12:15:56.968 | INFO     | __main__:<module>:4 - 0 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
+      "2022-10-31 09:04:06.896 | INFO     | __main__:<module>:4 - 0 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
      ]
     }
    ],
@@ -961,67 +961,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a85b9247-c1dc-4072-a1dd-7b61c8251eeb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-28 12:15:57.271 | INFO     | src.revised_case_normalization.py.format_for_grouper:format_for_grouper:86 - Formatted 17 cases\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0     115875;77;0;;W;20180110;01;20180112;00;2;0;I7024|I7020|Z9588|I1090|N184|N390|B962|J4481;395014::...\n",
-       "1     116851;82;0;;M;20180130;01;20180216;00;17;0;I5001|J91|I5013|I7020|L304|N185|I480|I1100|E1120|N08...\n",
-       "2     117722;93;0;;M;20180315;01;20180317;00;2;0;I7024|Z9588|N184|Z922|I743;395011::|397511::|395021::...\n",
-       "3     118215;91;0;;M;20180317;01;20180321;00;4;0;I495|I484|I480|I1090|I2519|I340|I351|I2728|J90|Z950|Z...\n",
-       "4     120279;93;0;;M;20180531;01;20180602;00;2;0;I7024|Z9588|Z921|Z922|N184|T828;395014::|004C12::|395...\n",
-       "5     116472;64;0;;M;20180117;01;20180125;00;8;8;I5014|I5001|I2513|I2522|N184|I1320|E875|L0301|E788|M1...\n",
-       "6                117999;58;0;;W;20180309;01;20180314;00;5;0;N390|B965|R400|G3520|F446|Z936|B370;992217::;\n",
-       "7     120078;79;0;;W;20180523;01;20180601;00;9;0;N390|B962|A4158|R650|E1190|E788|N183|J459|E038|E440;9...\n",
-       "8     119991;70;0;;M;20180519;01;20180525;00;6;0;N1781|Y579|I1100|I480|I5001|G2010|M4507|M8189|Z921|J9...\n",
-       "9     121288;51;0;;M;20180704;01;20180712;00;8;8;I208|I2513|D684|U6912|E788|J9580;361226::|361121::|36...\n",
-       "10    121387;65;0;;M;20180711;01;20180723;00;12;0;D384|J948|S2738|Y69|I480|Y849|M4186|D684|U6912|I483|...\n",
-       "11    121768;76;0;;M;20180923;01;20181002;00;9;8;I350|I2512|I1090|E788|F171|I7101|I1190|I493|Z922|J91;...\n",
-       "12    121893;84;0;;M;20180728;01;20180802;00;5;0;N390|A418|R650|N182|I2519|I1090|Z955|Z855|Z935|E1191;...\n",
-       "13    122148;78;0;;W;20180809;01;20180822;00;13;0;S2206|X599|E559|G2000|E538|D689;816610::|889714::|88...\n",
-       "14    123146;78;0;;W;20180918;01;20180919;00;1;0;I7022|T828|Y828|I708|I1090|Z9588|Z922|D686;395014::|0...\n",
-       "15    124638;80;0;;W;20181206;01;20181213;00;7;0;M4807|G553|M511|G551|M4316|M4856|I1090|K219|D6823;810...\n",
-       "16    125114;84;0;;M;20181127;01;20181215;00;18;0;C250|C772|K831|I1090|N183|Z867|Z921|F058;525110::|40...\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Format joined dataset to the SwissDRG Batchgrouper 2017 Format \n",
     "\n",
-    "grouper_input_data_string = format_for_grouper(joined)\n",
-    "\n",
-    "grouper_input_data_string"
+    "grouper_input_data_string = format_for_grouper(joined)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bade6ed7-d9d3-41fb-a082-d559c1467340",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"DRG\" : \"L63B\", \"MDC\" : \"11\", \"PCCL\" : 4, \"GST\" : \"NORMAL_GROUP\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
@@ -1055,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cd21268f-7f2c-400d-8420-e0601b23772d",
    "metadata": {},
    "outputs": [],
