--- a/src/revised_case_normalization/KSSG_2019_SRRWS_normalization_OK.ipynb
+++ b/src/revised_case_normalization/KSSG_2019_SRRWS_normalization_OK.ipynb
@@ -87,8 +87,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-28 12:15:38.296 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 48 cases for KSSG SRRWS 2019\n",
-      "2022-10-28 12:15:38.299 | INFO     | src.revised_case_normalization.py.normalize:normalize:57 - TYPES:\n",
+      "2022-10-28 12:30:17.304 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 48 cases for KSSG SRRWS 2019\n",
+      "2022-10-28 12:30:17.307 | INFO     | src.revised_case_normalization.py.normalize:normalize:57 - TYPES:\n",
       "tranche                   string\n",
       "case_id                   object\n",
       "patient_id                object\n",
@@ -119,14 +119,14 @@
       "kassenablehnung           string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-10-28 12:15:38.306 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-10-28 12:15:38.311 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-10-28 12:15:38.314 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-10-28 12:15:38.317 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-10-28 12:15:38.317 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-10-28 12:15:38.324 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 1 rows were affected:\n",
+      "2022-10-28 12:30:17.314 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-10-28 12:30:17.318 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-10-28 12:30:17.322 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-10-28 12:30:17.326 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-10-28 12:30:17.327 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-10-28 12:30:17.333 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 1 rows were affected:\n",
       "row 22: primary diagnosis D7014 => K521\n",
-      "2022-10-28 12:15:38.327 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:100 - Completed validation\n"
+      "2022-10-28 12:30:17.337 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:100 - Completed validation\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-28 12:15:39.208 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:124 - Read 15005 rows from the DB, for the hospital 'KSSG SRRWS' in 2019\n"
+      "2022-10-28 12:30:18.450 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:124 - Read 15005 rows from the DB, for the hospital 'KSSG SRRWS' in 2019\n"
      ]
     },
     {
@@ -330,17 +330,44 @@
       "3      297262  2070266822  2EAC70CD7BFA4C05         62         0                 0              0      M     2019-02-20                     11     2019-02-27                     00                 7                  0   2070266822\n",
       "4      297263  2010218207  5F89C9E9F4C322F7         74         0                 0              0      M     2019-02-26                     01     2019-02-28                     00                 2                  0   2010218207\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "aimedic_id                 int64\n",
+       "case_id                   object\n",
+       "patient_id                object\n",
+       "age_years                  int64\n",
+       "age_days                   int64\n",
+       "admission_weight           int64\n",
+       "gestation_age              int64\n",
+       "gender                    object\n",
+       "admission_date            object\n",
+       "grouper_admission_type    object\n",
+       "discharge_date            object\n",
+       "grouper_discharge_type    object\n",
+       "duration_of_stay           int64\n",
+       "ventilation_hours          int64\n",
+       "case_id_norm              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "cases_in_db = get_sociodemographics_for_hospital_year(file_info.hospital_name_db, int(file_info.year))\n",
     "cases_in_db[NORM_CASE_ID_COL] = cases_in_db[CASE_ID_COL].apply(remove_leading_zeros)\n",
-    "print(cases_in_db.head())"
+    "print(cases_in_db.head())\n",
+    "\n",
+    "cases_in_db.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8362bdd0",
    "metadata": {
     "collapsed": false,
@@ -348,7 +375,33 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "aimedic_id                 int64\n",
+       "case_id                   object\n",
+       "patient_id                object\n",
+       "age_years                  int64\n",
+       "age_days                   int64\n",
+       "admission_weight           int64\n",
+       "gestation_age              int64\n",
+       "gender                    object\n",
+       "admission_date            object\n",
+       "grouper_admission_type    object\n",
+       "discharge_date            object\n",
+       "grouper_discharge_type    object\n",
+       "duration_of_stay           int64\n",
+       "ventilation_hours          int64\n",
+       "case_id_norm              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cols_to_join = list(VALIDATION_COLS)\n",
     "cols_to_join.remove(CASE_ID_COL)\n",
@@ -361,39 +414,15 @@
     "joined = pd.merge(df_revised_case_d2d, cases_in_db,\n",
     "                  how='left',\n",
     "                  on=cols_to_join,\n",
-    "                  suffixes=('', '_db'))"
+    "                  suffixes=('', '_db'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1522c467-f27b-4d4c-bcc4-9b005b639edb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select cases in which the aimedic_id is not an NA\n",
-    "#joined = joined[joined['aimedic_id'].notna()]\n",
-    "#joined = joined.replace(np.nan, \"\")\n",
-    "#joined['aimedic_id'] = joined['aimedic_id'].astype(int)\n",
-    "#joined['age_days'] = joined['age_days'].astype(int)\n",
-    "#joined['admission_weight'] = joined['admission_weight'].astype(int)\n",
-    "#joined['gestation_age'] = joined['gestation_age'].astype(int)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a114f1c6-2ae9-40b2-8eea-b503686a6457",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-28 12:15:39.239 | INFO     | __main__:<module>:4 - 1 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print out how many rows could not be matched\n",
     "unmatched = joined[joined[AIMEDIC_ID_COL].isna()]\n",
@@ -403,75 +432,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a85b9247-c1dc-4072-a1dd-7b61c8251eeb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-10-28 12:15:39.626 | INFO     | src.revised_case_normalization.py.format_for_grouper:format_for_grouper:86 - Formatted 47 cases\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0     301351;67;0;;W;20190118;01;20190203;00;16;0.0;M7285|I5019|N1791|N182|E876|I2513|E788|E1174|G632|...\n",
-       "1     303814;75;0;;M;20190726;01;20190805;00;10;0.0;S510|X599|N1792|Z950|Z921|I1100|I5001|J91|E876|D50...\n",
-       "2     311918;70;0;;W;20190910;01;20190924;00;14;0.0;K432|K660|S3640|Y69|E876|I1000|I4288|D62;536111::|...\n",
-       "3     304119;59;0;;M;20190909;01;20190916;00;7;0.0;K868|K528|K210|K227|N1791|I2519|I480|E1150|E780|E87...\n",
-       "4     301317;79;0;;W;20190114;01;20190122;00;8;0.0;I441|J189|U6900|I1000|I672|E788|E039|J9580;378A21::...\n",
-       "5     300421;60;0;;M;20190416;01;20190430;00;14;0.0;D120|K913|K9183|T814|Y849|K660|K650|K358;457212::|...\n",
-       "6     307647;58;0;;W;20190702;01;20190710;00;8;0.0;K5722|T810|Y849|D62|I1000|E890|D6988;457621::|009A1...\n",
-       "7     303576;52;0;;M;20190702;01;20190713;00;11;0.0;K500|K564|T810|Y849|K660|S3681|Y69|R600|D6988;4573...\n",
-       "8     297941;77;0;;M;20190725;01;20190812;00;18;0.0;D122|K590|D62|E876|E778|K660|T810|Y849|N40|F329|R1...\n",
-       "9     297924;77;0;;W;20190811;01;20190819;00;8;0.0;K565|J188|U6900|E876|E880|H919|R18|Y69|K562|S3681;5...\n",
-       "10                       298741;49;0;;W;20191010;01;20191015;00;5;0.0;L024|E1191|L0311;86411B::|009520::;\n",
-       "11    300794;70;0;;M;20190903;01;20190912;00;9;0.0;K254|D62|K295|B980|K449|K2288|I2512|I2522|Z955|I109...\n",
-       "12    302458;77;0;;M;20191007;01;20191015;00;8;0.0;M161|D62|N40|M353|I1190|N183|Z921|I499|D6834|D6833;...\n",
-       "13    307967;54;0;;W;20190920;01;20191106;00;42;0.0;K510|E880|D62|E876|E559|R11|D90|I958|T818|Y849|K91...\n",
-       "14    307930;69;0;;W;20190908;01;20190918;00;10;0.0;G408|J81|E876|F6031|G2581|S700|X599|Z980|B962|I110...\n",
-       "15    309149;85;0;;M;20190809;01;20190817;00;8;0.0;C61|E780|Z950|I489|Z952|F102|N183|Z867|S819|Y349|E4...\n",
-       "16                       307268;76;0;;M;20190711;01;20190716;00;5;0.0;N390|K521|Y579|I1000|E1191|A419;::;\n",
-       "17    301929;66;0;;M;20190730;01;20190808;00;9;0.0;C670|C672|D62|Z921|I7021|Z867|I1190|I2519|N328|Z944...\n",
-       "18    297473;71;0;;M;20190129;01;20190202;00;4;0.0;K746|I982|K259|K295|B980|D508|K648|K766|R18;4516::|...\n",
-       "19    310909;26;0;;M;20190328;01;20190404;00;7;8.0;S3603|V99|T68|E875|K590|Y849|D62|R571;415::|99B712:...\n",
-       "20                      305894;72;0;;W;20190502;01;20190510;04;8;0.0;N390|B962|N1792|I1000|E871|E1191;::;\n",
-       "21    302402;79;0;;W;20190918;01;20190925;00;7;0.0;N812|Z867|I1000|E222|K590|Y849|I693|R470;6922::|705...\n",
-       "22    304376;73;0;;M;20191017;01;20191031;00;14;0.0;K521|C817|I2513|I1000|Z867|Z921|E876|E871|I480|A09...\n",
-       "23    312244;82;0;;W;20191106;01;20191111;00;5;0.0;I5001|I5013|I340|I361|E876|J459|F058|F102|F700|M353...\n",
-       "24    304522;86;0;;W;20191224;01;20191227;00;3;0.0;N111|N812|N1791|N183|Z950|I1190|F329|F051|F018|E871...\n",
-       "25    308506;81;0;;M;20190310;01;20190319;00;9;0.0;N390|A498|B962|G2090|N1791|N183|E86|D648|N40|F03|R3...\n",
-       "26                    306562;83;0;;W;20190307;01;20190311;00;4;0.0;I483|I509|N183|E039|M130|L97|I1100;::;\n",
-       "27           303972;78;0;;W;20190603;01;20190613;00;10;0.0;I5001|I1100|I483|N184|F319|L0301|E875|I832;::;\n",
-       "28    305889;38;0;;M;20190326;01;20190404;00;9;0.0;E1011|E86|R18|K8580|K219|N1791|E876|E8338|K290|J91;...\n",
-       "29            300256;48;0;;M;20190507;01;20190514;00;7;0.0;J188|J4401|F329|F432|I1000|K219|R522|J9600;::;\n",
-       "30         301709;90;0;;W;20190704;01;20190710;00;6;0.0;R55|S2206|X599|B022|I1000|N390|E890|M159|I652;::;\n",
-       "31         299841;72;0;;W;20190726;01;20190729;00;3;0.0;A099|E876|S800|X599|I1190|N184|Z921|E230|E274;::;\n",
-       "32    311385;84;0;;M;20190731;01;20190808;00;8;0.0;J4409|B965|D529|M353|E871|K649|R600|S5180|Y349|D508...\n",
-       "33              305602;66;0;;M;20190504;01;20190508;00;4;0.0;N390|B962|E871|I2513|E222|R798|F101|D689;::;\n",
-       "34    306195;67;0;;M;20190912;11;20190927;00;15;0.0;C712|Z5188|R470|G819|H518|R295|H570|Z978|G418|E119...\n",
-       "35          309955;55;0;;M;20191017;01;20191025;06;8;0.0;K8580|K860|K862|F102|I1000|R600|F132|I81|R18;::;\n",
-       "36    301228;81;0;;M;20190127;01;20190205;00;9;0.0;N390|B962|N1792|N182|D649|N40|E876|H109|F102|R298|U...\n",
-       "37    299307;66;0;;W;20190227;01;20190311;00;12;0.0;A419|N390|J101|E049|E876|E870|E8358|M8098|E1190|I1...\n",
-       "38    306426;71;0;;M;20191108;01;20191127;00;19;0.0;K260|K295|B980|D62|I1000|N183|M160|M6245|J91|R600|...\n",
-       "39    305615;81;0;;W;20190713;01;20190716;00;3;0.0;I489|I1100|I5001|E876|E890|M353|M159|R391|Z480|J91;...\n",
-       "40    299526;50;0;;W;20190228;01;20190307;00;7;0.0;N813|E780|F329|R11|Y579|T835|Y849|B962|D62;6843::|7...\n",
-       "41      303238;85;0;;M;20190322;01;20190325;00;3;0.0;I509|J91|I351|I340|I1100|I2519|N183|Z921|N40|R18;::;\n",
-       "42       309744;59;0;;W;20190327;01;20190403;00;7;0.0;J4400|I429|I2519|I1000|D508|M0699|J841|F172|J91;::;\n",
-       "43    297986;81;0;;M;20190802;01;20190812;00;10;0.0;K262|K227|D62|N183|N1799|E871|E876|E8358|E8338|K85...\n",
-       "44    308081;31;0;;W;20191010;01;20191018;00;8;0.0;O240|E1072|N083|H360|Z370|O096|N049|O998|D62|O662|O...\n",
-       "45      305443;38;0;;W;20190720;01;20190728;00;8;0.0;O610|O097|Z370|O48|O48|O244|O990|D62;741X10::|734::;\n",
-       "46                   300673;59;0;;M;20191019;01;20191028;00;9;0.0;A46|I483|I5001|E876|M161|I1090|F102;::;\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Format joined dataset to the SwissDRG Batchgrouper 2017 Format \n",
     "\n",
@@ -483,18 +447,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bade6ed7-d9d3-41fb-a082-d559c1467340",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{\"DRG\" : \"X06A\", \"MDC\" : \"21B\", \"PCCL\" : 4, \"GST\" : \"NORMAL_GROUP\"}, {\"DRG\" : \"G18A\", \"MDC\" : \"06\", \"PCCL\" : 4, \"GST\" : \"NORMAL_GROUP\"}, {\"DRG\" : \"G13Z\", \"MDC\" : \"06\", \"PCCL\" : 4, \"GST\" : \"NORMAL_GROUP\"}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
@@ -528,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cd21268f-7f2c-400d-8420-e0601b23772d",
    "metadata": {},
    "outputs": [],
