--- a/src/revised_case_normalization/TEST_Grouper_Function_CHOP_SIDE_DATE.ipynb
+++ b/src/revised_case_normalization/TEST_Grouper_Function_CHOP_SIDE_DATE.ipynb
@@ -40,7 +40,7 @@
     "from src.revised_case_normalization.py.normalize import normalize, remove_leading_zeros\n",
     "from src.service import bfs_cases_db_service as bfs_db\n",
     "from src.service.bfs_cases_db_service import session, get_sociodemographics_for_hospital_year, get_earliest_revisions_for_aimedic_ids, get_codes, apply_revisions\n",
-    "from src.revised_case_normalization.py.format_for_grouper import format_for_grouper_2"
+    "from src.revised_case_normalization.py.format_for_grouper import format_for_grouper"
    ]
   },
   {
@@ -87,8 +87,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-01 13:33:54.907 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 51 cases for Hirslanden St. Anna 2018\n",
-      "2022-11-01 13:33:54.910 | INFO     | src.revised_case_normalization.py.normalize:normalize:57 - TYPES:\n",
+      "2022-11-01 14:36:45.594 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 51 cases for Hirslanden St. Anna 2018\n",
+      "2022-11-01 14:36:45.597 | INFO     | src.revised_case_normalization.py.normalize:normalize:57 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "case_id                   object\n",
@@ -118,14 +118,14 @@
       "kassenbeanstandung        string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-01 13:33:54.917 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-01 13:33:54.921 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-01 13:33:54.925 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-01 13:33:54.929 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-01 13:33:54.929 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-01 13:33:54.935 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 1 rows were affected:\n",
+      "2022-11-01 14:36:45.605 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-01 14:36:45.609 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-01 14:36:45.613 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-01 14:36:45.617 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-01 14:36:45.618 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-01 14:36:45.627 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:161 - Validated redundant PD info in 'added_icds'/'removed_icds': The following 1 rows were affected:\n",
       "row 20: primary diagnosis T813 => M8668\n",
-      "2022-11-01 13:33:54.938 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:100 - Completed validation\n"
+      "2022-11-01 14:36:45.632 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:100 - Completed validation\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-01 13:33:56.605 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:125 - Read 12990 rows from the DB, for the hospital 'Hirslanden St. Anna' in 2018\n"
+      "2022-11-01 14:36:47.454 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:125 - Read 12990 rows from the DB, for the hospital 'Hirslanden St. Anna' in 2018\n"
      ]
     },
     {
@@ -400,7 +400,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-01 13:33:56.632 | INFO     | __main__:<module>:4 - 0 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
+      "2022-11-01 14:36:47.483 | INFO     | __main__:<module>:4 - 0 rows could not be matched, given ['age_years', 'case_id_norm', 'duration_of_stay', 'gender']\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "a85b9247-c1dc-4072-a1dd-7b61c8251eeb",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-01 13:34:13.795 | INFO     | src.revised_case_normalization.py.format_for_grouper:format_for_grouper_2:187 - Formatted 51 cases\n"
+      "2022-11-01 14:36:48.464 | INFO     | src.revised_case_normalization.py.format_for_grouper:format_for_grouper:187 - Formatted 51 cases\n"
      ]
     },
     {
@@ -430,7 +430,7 @@
        "'143608;85;0;;M;20180429;01;20180507;00;8;0;S722|X599|Z9664|G2090|F03|F058|T509|R451|R443|R391|I519|Z880|G248|M5486|D62;793511:R:20180429|948X40::20180429|9900::20180429|99B811::20180429|883830:R:20180429|990410:B:20180429;'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
    "source": [
     "# Format joined dataset to the SwissDRG Batchgrouper 2017 Format \n",
     "\n",
-    "grouper_input_data_string = format_for_grouper_2(joined)\n",
+    "grouper_input_data_string = format_for_grouper(joined)\n",
     "\n",
     "\n",
     "grouper_input_data_string[17]"
