[2022-43] Refactored functions to interact with the DB

--- a/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Aarau_2018_normalization.ipynb
@@ -78,8 +78,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-04 00:42:31.453 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 17 cases for Hirslanden Aarau 2018\n",
-      "2022-11-04 00:42:31.458 | INFO     | src.revised_case_normalization.py.normalize:normalize:59 - TYPES:\n",
+      "2022-11-04 09:19:08.492 | INFO     | src.revised_case_normalization.py.normalize:normalize:35 - Read 17 cases for Hirslanden Aarau 2018\n",
+      "2022-11-04 09:19:08.498 | INFO     | src.revised_case_normalization.py.normalize:normalize:59 - TYPES:\n",
       "tranche                   string\n",
       "datum                     string\n",
       "case_id                   object\n",
@@ -110,13 +110,13 @@
       "kassenbeanstandung        string\n",
       "case_id_norm              object\n",
       "dtype: object\n",
-      "2022-11-04 00:42:31.464 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-04 00:42:31.466 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-04 00:42:31.469 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-04 00:42:31.471 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-04 00:42:31.472 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-04 00:42:31.475 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
-      "2022-11-04 00:42:31.478 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:106 - Completed validation\n"
+      "2022-11-04 09:19:08.506 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-04 09:19:08.509 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-04 09:19:08.511 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-04 09:19:08.514 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-04 09:19:08.514 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-04 09:19:08.519 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
+      "2022-11-04 09:19:08.526 | SUCCESS  | src.revised_case_normalization.py.normalize:normalize:106 - Completed validation\n"
      ]
     },
     {
@@ -154,7 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-04 00:42:34.603 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:125 - Read 10112 rows from the DB, for the hospital 'Hirslanden Aarau' in 2018\n"
+      "2022-11-04 09:19:11.518 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:89 - Read 10112 rows from the DB, for the hospital 'Hirslanden Aarau' in 2018\n"
      ]
     },
     {
@@ -204,8 +204,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-04 00:42:35.547 | INFO     | src.revised_case_normalization.py.group:group:12 - Grouping 17 cases ...\n",
-      "2022-11-04 00:42:36.669 | SUCCESS  | src.revised_case_normalization.py.group:group:16 - Grouped 17 cases into: 17 revisions, 168 diagnoses rows, 108 procedure rows\n"
+      "2022-11-04 09:19:12.679 | INFO     | src.revised_case_normalization.py.group:group:12 - Grouping 17 cases ...\n",
+      "2022-11-04 09:19:14.985 | SUCCESS  | src.revised_case_normalization.py.group:group:16 - Grouped 17 cases into: 17 revisions, 168 diagnoses rows, 108 procedure rows\n"
      ]
     }
    ],
@@ -250,12 +250,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-04 00:42:36.683 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:323 - Trying to insert 17 cases into the 'Revisions' table ...\n",
-      "2022-11-04 00:42:37.269 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:360 - Inserted 17 cases into the 'Revisions' table\n",
-      "2022-11-04 00:42:37.279 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:372 - Trying to insert 168 rows into the 'Diagnoses' table ...\n",
-      "2022-11-04 00:42:39.217 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:410 - Inserted 168 rows into the 'Diagnoses' table\n",
-      "2022-11-04 00:42:39.222 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:420 - Trying to insert 108 rows into the 'Procedures' table ...\n",
-      "2022-11-04 00:42:40.664 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:466 - Inserted 108 rows into the 'Procedures' table\n"
+      "2022-11-04 09:19:15.025 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:224 - Trying to insert 17 cases into the 'Revisions' table ...\n",
+      "2022-11-04 09:19:18.399 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:250 - Deleted 17 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-04 09:19:18.621 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:261 - Inserted 17 cases into the 'Revisions' table\n",
+      "2022-11-04 09:19:18.623 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:273 - Trying to insert 168 rows into the 'Diagnoses' table ...\n",
+      "2022-11-04 09:19:28.221 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:311 - Inserted 168 rows into the 'Diagnoses' table\n",
+      "2022-11-04 09:19:28.224 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:321 - Trying to insert 108 rows into the 'Procedures' table ...\n",
+      "2022-11-04 09:19:30.056 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:367 - Inserted 108 rows into the 'Procedures' table\n"
      ]
     }
    ],
